Added logic for multi certs requested on application

--- a/rpa-certificates-of-free-sale/LauraTest.xaml
+++ b/rpa-certificates-of-free-sale/LauraTest.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="LauraTest" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1794,2716" sap2010:WorkflowViewState.IdRef="LauraTest_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:moiw="clr-namespace:Microsoft.Office.Interop.Word;assembly=Microsoft.Office.Interop.Word" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:p="http://schemas.uipath.com/workflow/activities/word" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:snm="clr-namespace:System.Net.Mail;assembly=System" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="LauraTest" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1794,2936" sap2010:WorkflowViewState.IdRef="LauraTest_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:moiw="clr-namespace:Microsoft.Office.Interop.Word;assembly=Microsoft.Office.Interop.Word" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:p="http://schemas.uipath.com/workflow/activities/word" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:snm="clr-namespace:System.Net.Mail;assembly=System" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="25">
       <x:String>System.Activities</x:String>
@@ -57,15 +57,15 @@
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap:VirtualizedContainerService.HintSize="817,2611" sap2010:WorkflowViewState.IdRef="Sequence_15">
+  <Sequence sap:VirtualizedContainerService.HintSize="817,2831" sap2010:WorkflowViewState.IdRef="Sequence_15">
     <Sequence.Variables>
-      <Variable x:TypeArguments="x:String" Default="Taste of The Wild Sierra Mountain Canine Formula with Lamb in Gravy 390g&#xA;Taste of The Wild Southwest Canyon Canine Formula Stew 390g&#xA;Taste of The Wild Pacific Stream Canine Formula with Salmon in Gravy 390g&#xA;Taste of The Wild Wetlands Canine Formula with Fowl in Gravy 390g&#xA;&#xA;All on 1 Certificate &#xA;" Name="strTestString" />
-      <Variable x:TypeArguments="x:Int32" Name="intSplitString" />
-      <Variable x:TypeArguments="scg:List(x:String)" Name="listProductDetails">
+      <Variable x:TypeArguments="x:String" Name="strTestString">
         <Variable.Default>
-          <mva:VisualBasicValue x:TypeArguments="scg:List(x:String)" ExpressionText="new List(of String)" />
+          <Literal x:TypeArguments="x:String">Taste of The Wild Sierra Mountain Canine Formula with Lamb in Gravy 390g</Literal>
         </Variable.Default>
       </Variable>
+      <Variable x:TypeArguments="x:Int32" Name="intSplitString" />
+      <Variable x:TypeArguments="scg:List(x:String)" Default="[new List(of String)]" Name="listProductDetails" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -165,14 +165,22 @@ SAUDI ARABIA
       </sap:WorkflowViewStateService.ViewState>
     </ui:CommentOut>
     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="775,61" sap2010:WorkflowViewState.IdRef="WriteLine_32" Text="[strTestString.Count.ToString]" />
-    <If Condition="[strTestString.Count &gt; 255]" sap:VirtualizedContainerService.HintSize="775,2327" sap2010:WorkflowViewState.IdRef="If_1">
+    <If Condition="[strTestString.Count &gt; 255]" sap:VirtualizedContainerService.HintSize="775,2547" sap2010:WorkflowViewState.IdRef="If_1">
       <If.Then>
-        <Sequence sap:VirtualizedContainerService.HintSize="630,2179" sap2010:WorkflowViewState.IdRef="Sequence_22">
+        <Sequence sap:VirtualizedContainerService.HintSize="630,2399" sap2010:WorkflowViewState.IdRef="Sequence_22">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
+          <Assign sap:VirtualizedContainerService.HintSize="588,60" sap2010:WorkflowViewState.IdRef="Assign_38">
+            <Assign.To>
+              <OutArgument x:TypeArguments="x:String">[strTestString]</OutArgument>
+            </Assign.To>
+            <Assign.Value>
+              <InArgument x:TypeArguments="x:String">[Regex.Replace(strTestString, "\n", "\n")]</InArgument>
+            </Assign.Value>
+          </Assign>
           <ui:InterruptibleWhile DisplayName="While" sap:VirtualizedContainerService.HintSize="588,479" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
             <ui:InterruptibleWhile.Body>
               <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="304,314" sap2010:WorkflowViewState.IdRef="Sequence_19">
@@ -186,7 +194,7 @@ SAUDI ARABIA
                     <OutArgument x:TypeArguments="x:Int32">[intSplitString]</OutArgument>
                   </Assign.To>
                   <Assign.Value>
-                    <InArgument x:TypeArguments="x:Int32">[(strTestString.Substring(0, 255).LastIndexOf(" ") + 1)]</InArgument>
+                    <InArgument x:TypeArguments="x:Int32">[(strTestString.Substring(0, 235).LastIndexOf(" ") + 1)]</InArgument>
                   </Assign.Value>
                 </Assign>
                 <AddToCollection x:TypeArguments="x:String" Collection="[listProductDetails]" DisplayName="Add To Collection" sap:VirtualizedContainerService.HintSize="262,22" sap2010:WorkflowViewState.IdRef="AddToCollection`1_1" Item="[strTestString.Substring(0, intSplitString)]" />
@@ -201,7 +209,7 @@ SAUDI ARABIA
               </Sequence>
             </ui:InterruptibleWhile.Body>
             <ui:InterruptibleWhile.Condition>
-              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="strTestString.Count &gt; 255" />
+              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="strTestString.Count &gt; 235" />
             </ui:InterruptibleWhile.Condition>
           </ui:InterruptibleWhile>
           <If Condition="[strTestString.Count &gt; 0]" sap:VirtualizedContainerService.HintSize="588,208" sap2010:WorkflowViewState.IdRef="If_2">
@@ -252,13 +260,13 @@ SAUDI ARABIA
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
           </ui:CommentOut>
-          <p:WordApplicationScope DisplayName="Word Application Scope" FilePath="\\GFD218DF\x953922$\Documents\COFS\Testing\Placeholder Test doc.docx" sap:VirtualizedContainerService.HintSize="588,902" sap2010:WorkflowViewState.IdRef="WordApplicationScope_1">
+          <p:WordApplicationScope DisplayName="Word Application Scope" FilePath="\\GFD218DF\x953922$\Documents\COFS\Testing\Placeholder Test doc.docx" sap:VirtualizedContainerService.HintSize="588,1022" sap2010:WorkflowViewState.IdRef="WordApplicationScope_1">
             <p:WordApplicationScope.Body>
               <ActivityAction x:TypeArguments="ui:WordDocument">
                 <ActivityAction.Argument>
                   <DelegateInArgument x:TypeArguments="ui:WordDocument" Name="WordDocumentScope" />
                 </ActivityAction.Argument>
-                <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="554,793" sap2010:WorkflowViewState.IdRef="Sequence_24">
+                <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="554,913" sap2010:WorkflowViewState.IdRef="Sequence_24">
                   <Sequence.Variables>
                     <Variable x:TypeArguments="x:String" Name="strLastWords" />
                   </Sequence.Variables>
@@ -267,33 +275,74 @@ SAUDI ARABIA
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <p:WordReplaceText Found="{x:Null}" DisplayName="Replace Text" sap:VirtualizedContainerService.HintSize="512,137" sap2010:WorkflowViewState.IdRef="WordReplaceText_1" Replace="[listProductDetails(0)]" Search="ProductPlaceholder" />
-                  <Assign sap:VirtualizedContainerService.HintSize="512,60" sap2010:WorkflowViewState.IdRef="Assign_37">
-                    <Assign.To>
-                      <OutArgument x:TypeArguments="x:String">[strLastWords]</OutArgument>
-                    </Assign.To>
-                    <Assign.Value>
-                      <InArgument x:TypeArguments="x:String">[listProductDetails(0).Substring()]</InArgument>
-                    </Assign.Value>
-                  </Assign>
-                  <RemoveFromCollection x:TypeArguments="x:String" Collection="[listProductDetails]" DisplayName="Remove From Collection" sap:VirtualizedContainerService.HintSize="512,22" sap2010:WorkflowViewState.IdRef="RemoveFromCollection`1_1" Item="[listProductDetails(0)]" />
-                  <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="512,362" sap2010:WorkflowViewState.IdRef="ForEach`1_2" Values="[listProductDetails]">
+                  <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="512,51" sap2010:WorkflowViewState.IdRef="CommentOut_4">
+                    <ui:CommentOut.Body>
+                      <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="476,229" sap2010:WorkflowViewState.IdRef="Sequence_25">
+                        <sap:WorkflowViewStateService.ViewState>
+                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          </scg:Dictionary>
+                        </sap:WorkflowViewStateService.ViewState>
+                        <p:WordReplaceText Found="{x:Null}" DisplayName="Replace Text" sap:VirtualizedContainerService.HintSize="434,137" sap2010:WorkflowViewState.IdRef="WordReplaceText_1" Replace="[listProductDetails(0) + &quot; ProductPlaceholder&quot;]" Search="ProductPlaceholder" />
+                      </Sequence>
+                    </ui:CommentOut.Body>
+                    <sap:WorkflowViewStateService.ViewState>
+                      <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                        <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                        <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                      </scg:Dictionary>
+                    </sap:WorkflowViewStateService.ViewState>
+                  </ui:CommentOut>
+                  <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="512,51" sap2010:WorkflowViewState.IdRef="CommentOut_5">
+                    <ui:CommentOut.Body>
+                      <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="242,114" sap2010:WorkflowViewState.IdRef="Sequence_26">
+                        <sap:WorkflowViewStateService.ViewState>
+                          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                          </scg:Dictionary>
+                        </sap:WorkflowViewStateService.ViewState>
+                        <RemoveFromCollection x:TypeArguments="x:String" Collection="[listProductDetails]" DisplayName="Remove From Collection" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="RemoveFromCollection`1_1" Item="[listProductDetails(0)]" />
+                      </Sequence>
+                    </ui:CommentOut.Body>
+                    <sap:WorkflowViewStateService.ViewState>
+                      <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                        <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                        <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                      </scg:Dictionary>
+                    </sap:WorkflowViewStateService.ViewState>
+                  </ui:CommentOut>
+                  <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="512,462" sap2010:WorkflowViewState.IdRef="ForEach`1_4" Values="[listProductDetails]">
                     <ui:ForEach.Body>
                       <ActivityAction x:TypeArguments="x:String">
                         <ActivityAction.Argument>
                           <DelegateInArgument x:TypeArguments="x:String" Name="item" />
                         </ActivityAction.Argument>
-                        <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="476,229" sap2010:WorkflowViewState.IdRef="Sequence_23">
+                        <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="476,329" sap2010:WorkflowViewState.IdRef="Sequence_23">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <p:WordReplaceText Found="{x:Null}" Replace="{x:Null}" Search="{x:Null}" DisplayName="Replace Text" sap:VirtualizedContainerService.HintSize="434,137" sap2010:WorkflowViewState.IdRef="WordReplaceText_2" />
+                          <Assign sap:VirtualizedContainerService.HintSize="434,60" sap2010:WorkflowViewState.IdRef="Assign_39">
+                            <Assign.To>
+                              <OutArgument x:TypeArguments="x:String">[item]</OutArgument>
+                            </Assign.To>
+                            <Assign.Value>
+                              <InArgument x:TypeArguments="x:String">[item.Replace("\n", Environment.NewLine)]</InArgument>
+                            </Assign.Value>
+                          </Assign>
+                          <p:WordReplaceText Found="{x:Null}" DisplayName="Replace Text" sap:VirtualizedContainerService.HintSize="434,137" sap2010:WorkflowViewState.IdRef="WordReplaceText_2" Replace="[item + &quot;ProductPlaceholder&quot;]" Search="ProductPlaceholder" />
                         </Sequence>
                       </ActivityAction>
                     </ui:ForEach.Body>
                   </ui:ForEach>
+                  <p:WordReplaceText Found="{x:Null}" DisplayName="Replace Text" sap:VirtualizedContainerService.HintSize="512,137" sap2010:WorkflowViewState.IdRef="WordReplaceText_3" Search="ProductPlaceholder">
+                    <p:WordReplaceText.Replace>
+                      <InArgument x:TypeArguments="x:String">
+                        <Literal x:TypeArguments="x:String" Value="" />
+                      </InArgument>
+                    </p:WordReplaceText.Replace>
+                  </p:WordReplaceText>
                 </Sequence>
               </ActivityAction>
             </p:WordApplicationScope.Body>
